--- a/Cnx.Shared.DAL.Models/CodeGenerator.tt
+++ b/Cnx.Shared.DAL.Models/CodeGenerator.tt
@@ -1,29 +1,28 @@
 ﻿<#@ include file="EF.Reverse.POCO.Core.ttinclude" #>
 <#
+	// tsm: Modified for my connection string
     // v2.37.2
     // Please make changes to the settings below.
     // All you have to do is save this file, and the output file(s) is/are generated. Compiling does not regenerate the file(s).
     // A course for this generator is available on Pluralsight at https://www.pluralsight.com/courses/code-first-entity-framework-legacy-databases
 
     // Main settings **********************************************************************************************************************
-    Settings.ConnectionStringName = "MyDbContext";   // Searches for this connection string in config files listed below in the ConfigFilenameSearchOrder setting
+    // Settings.ConnectionStringName = "";   // Searches for this connection string in config files listed below in the ConfigFilenameSearchOrder setting
     // ConnectionStringName is the only required setting.
     Settings.CommandTimeout = 600; // SQL Command timeout in seconds. 600 is 10 minutes, 0 will wait indefinately. Some databases can be slow retrieving schema information.
     // As an alternative to ConnectionStringName above, which must match your app/web.config connection string name, you can override them below
-    // Settings.ConnectionString = "Data Source=(local);Initial Catalog=Northwind;Integrated Security=True;Application Name=EntityFramework Reverse POCO Generator";
-    // Settings.ProviderName = "System.Data.SqlClient";
+    Settings.ConnectionString = "Data Source=UITS-TOMMCN-L;Initial Catalog=ResonanceDBv1;Integrated Security=True;MultipleActiveResultSets=True";
+    Settings.ProviderName = "System.Data.SqlClient";
 
-    Settings.Namespace = DefaultNamespace; // Override the default namespace here
-    Settings.DbContextName = "MyDbContext"; // Note: If generating separate files, please give the db context a different name from this tt filename.
-    //Settings.DbContextInterfaceName = "IMyDbContext"; // Defaults to "I" + DbContextName or set string empty to not implement any interface.
+    Settings.Namespace = "Cnx.Shared.DAL.Models"; // Override the default namespace here
+    Settings.DbContextName = "EntityDB"; // Note: If generating separate files, please give the db context a different name from this tt filename.
     Settings.DbContextInterfaceBaseClasses = "System.IDisposable";    // Specify what the base classes are for your database context interface
     Settings.DbContextBaseClass = "System.Data.Entity.DbContext";   // Specify what the base class is for your DbContext. For ASP.NET Identity use "IdentityDbContext<ApplicationUser>"
     Settings.AddParameterlessConstructorToDbContext = true; // If true, then DbContext will have a default (parameterless) constructor which automatically passes in the connection string name, if false then no parameterless constructor will be created.
-    //Settings.DefaultConstructorArgument = "EnvironmentConnectionStrings.MyDbContext"; //defaults to "Name=" + ConnectionStringName
-    Settings.ConfigurationClassName = "Configuration"; // Configuration, Mapping, Map, etc. This is appended to the Poco class name to configure the mappings.
+    Settings.ConfigurationClassName = "_Map"; // Configuration, Mapping, Map, etc. This is appended to the Poco class name to configure the mappings.
     Settings.FilenameSearchOrder = new[] { "app.config", "web.config" }; // Add more here if required. The config files are searched for in the local project first, then the whole solution second.
-    Settings.GenerateSeparateFiles = false;
-    Settings.EntityClassesModifiers        = "public"; // "public partial";
+    Settings.GenerateSeparateFiles = true;
+    Settings.EntityClassesModifiers        = "public partial"; // "public partial";
     Settings.ConfigurationClassesModifiers = "public"; // "public partial";
     Settings.DbContextClassModifiers       = "public"; // "public partial";
     Settings.DbContextInterfaceModifiers   = "public"; // "public partial";
@@ -31,9 +30,9 @@
     Settings.ResultClassModifiers          = "public"; // "public partial";
     Settings.UseMappingTables = true; // If true, mapping will be used and no mapping tables will be generated. If false, all tables will be generated.
     Settings.UsePascalCase = true;    // This will rename the generated C# tables & properties to use PascalCase. If false table & property names will be left alone.
-    Settings.UseDataAnnotations = false; // If true, will add data annotations to the poco classes.
+    Settings.UseDataAnnotations = true; // If true, will add data annotations to the poco classes.
     Settings.UseDataAnnotationsWithFluent = false; // If true, then non-Entity Framework-specific DataAnnotations (like [Required] and [StringLength]) will be applied to Entities even if UseDataAnnotations is false.
-    Settings.UsePropertyInitializers = false; // Removes POCO constructor and instead uses C# 6 property initialisers to set defaults
+    Settings.UsePropertyInitializers = true; // Removes POCO constructor and instead uses C# 6 property initialisers to set defaults
     Settings.UseLazyLoading = true; // Marks all navigation properties as virtual or not, to support or disable EF Lazy Loading feature
     Settings.UseInheritedBaseInterfaceFunctions = false; // If true, the main DBContext interface functions will come from the DBContextInterfaceBaseClasses and not generated. If false, the functions will be generated.
     Settings.IncludeComments = CommentsStyle.AtEndOfField; // Adds comments to the generated code
@@ -41,9 +40,9 @@
     Settings.IncludeConnectionSettingComments = true; // Add comments describing connection settings used to generate file
     Settings.IncludeViews = true;
     Settings.IncludeSynonyms = false;
-    Settings.IncludeStoredProcedures = true;
+    Settings.IncludeStoredProcedures = false;
     Settings.IncludeTableValuedFunctions = false; // If true, you must set IncludeStoredProcedures = true, and install the "EntityFramework.CodeFirstStoreFunctions" Nuget Package.
-    Settings.DisableGeographyTypes = false; // Turns off use of System.Data.Entity.Spatial.DbGeography and System.Data.Entity.Spatial.DbGeometry as OData doesn't support entities with geometry/geography types.
+    Settings.DisableGeographyTypes = true; // Turns off use of System.Data.Entity.Spatial.DbGeography and System.Data.Entity.Spatial.DbGeometry as OData doesn't support entities with geometry/geography types.
     //Settings.CollectionInterfaceType = "System.Collections.Generic.List"; // Determines the declaration type of collections for the Navigation Properties. ICollection is used if not set.
     Settings.CollectionType = "System.Collections.Generic.List";  // Determines the type of collection for the Navigation Properties. "ObservableCollection" for example. Add "System.Collections.ObjectModel" to AdditionalNamespaces if setting the CollectionType = "ObservableCollection".
     Settings.NullableShortHand = true; //true => T?, false => Nullable<T>
@@ -52,7 +51,7 @@
     Settings.IncludeQueryTraceOn9481Flag = false; // If SqlServer 2014 appears frozen / take a long time when this file is saved, try setting this to true (you will also need elevated privileges).
     Settings.IncludeCodeGeneratedAttribute = true; // If true, will include the GeneratedCode attribute, false to remove it.
     Settings.UsePrivateSetterForComputedColumns = true; // If the columns is computed, use a private setter.
-    Settings.AdditionalNamespaces = new[] { "" };  // To include extra namespaces, include them here. i.e. "Microsoft.AspNet.Identity.EntityFramework"
+    Settings.AdditionalNamespaces = new[] { "Newtonsoft.Json" };  // To include extra namespaces, include them here. i.e. "Microsoft.AspNet.Identity.EntityFramework"
     Settings.AdditionalContextInterfaceItems = new[] // To include extra db context interface items, include them here. Also set DbContextClassModifiers="public partial", and implement the partial DbContext class functions.
     {
         ""  //  example: "void SetAutoDetectChangesEnabled(bool flag);"
@@ -63,11 +62,11 @@
     // For more control, take a look at ForeignKeyAnnotationsProcessing() further down
     Settings.AdditionalReverseNavigationsDataAnnotations = new string[] // Data Annotations for all ReverseNavigationProperty.
     {
-        // "JsonIgnore" // Also add "Newtonsoft.Json" to the AdditionalNamespaces array above
+        "JsonIgnore" // Also add "Newtonsoft.Json" to the AdditionalNamespaces array above
     };
     Settings.AdditionalForeignKeysDataAnnotations = new string[] // Data Annotations for all ForeignKeys.
     {
-        // "JsonIgnore" // Also add "Newtonsoft.Json" to the AdditionalNamespaces array above
+        "JsonIgnore" // Also add "Newtonsoft.Json" to the AdditionalNamespaces array above
     };
     Settings.ColumnNameToDataAnnotation = new Dictionary<string, string>
     {
@@ -440,7 +439,7 @@
         return r.ToString();
         */
 
-        return "";
+        return " : EntityBaseClass";
     };
 
     // Writes any boilerplate stuff inside the POCO class
